fixed annotatedimages description overlaping and resizing

--- a/css/General.styl
+++ b/css/General.styl
@@ -79,7 +79,7 @@
 
 #tagRoot .annotatedImageMediaDescription
 	background-color rgba(0, 0, 0, 0.8)
-	position absolute
+	//position absolute
 	max-height 30%
 	top 100%
 	overflow-y auto
